--- a/public/index.html
+++ b/public/index.html
@@ -2,24 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Alura Typer</title>
-    <!--Import materialize.css-->
-    <link rel="stylesheet" href="css/libs/materialize.min.css">
-    <!-- Import Google Material Icons -->
-    <link href="css/libs/google-fonts.css" rel="stylesheet">
-
+    <title>Ativos</title>
     <link href="css/index.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
-    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
 </head>
 <body>
-
     <table id="tabela-ativos">
         <thead>
-            <th>Ativos</th>
-            <th></th>
+            <th class="th-ativos">Ativos(<span id="qtdAtivos"></span>)</th>
+            <th>Total</th>
+            <th>Porcentagem</th>
         </thead>
+        <tbody>
+            <tr>
+                <td>Ativo 1</td>
+                <td>Valor</td>
+                <td>Porcentagem</td>
+            </tr>
+        </tbody>
     </table>
-
 </body>
 </html>
