--- a/public/index.html
+++ b/public/index.html
@@ -8,15 +8,16 @@
 <body>
     <table id="tabela-ativos">
         <thead>
-            <th class="th-ativos">Ativos(<span id="qtdAtivos"></span>)</th>
-            <th>Total</th>
-            <th>Porcentagem</th>
+            <th class="th-ativos">Ativos (<span id="qtdAtivos"></span>)</th>
+            <th>R$ <input type="text" width="60px"/></th>
+            <th><span id="qtdPorcentagem">%</span></th>
         </thead>
         <tbody>
             <tr>
                 <td>Ativo 1</td>
                 <td>Valor</td>
                 <td>Porcentagem</td>
+                <td><img src=""/></td>
             </tr>
         </tbody>
     </table>
