--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <table id="tabela-ativos" class="tabela-at">
         <thead>
             <th class="th-ativos">Ativos (<span id="qtdAtivos"></span>)</th>
-            <th>R$ <input type="text" width="60px" id="inputTotal" class="inputTxtTotal"/></th>
+            <th>R$ <input type="number" width="60px" id="inputTotal" class="inputTxtTotal"/></th>
             <th><span id="qtdPorcentagem">100</span><span> %</span></th>
             <th><img src="./ic_lixeira.png"/></th>
         </thead>
